Overflow fixes

--- a/style.css
+++ b/style.css
@@ -7,9 +7,7 @@ margin: 0;
 padding: 0;   
 box-sizing: border-box;
 }
-html, body {
-    overflow-x: hidden;
-}
+
 :root {
     --mainColor-darkGrey: #232323;
     --mainColor-lighterGrey: #2D2D2C;
@@ -42,6 +40,7 @@ body {
 .card{
     display: flex;
     flex-direction: column;
+    
     height: 100px;
     width: fit-content;
     text-align: center;
